<?xml version="1.0"?>
<package format="3">
  <name>extruder_stepper_velocity_controller</name>
  <version>0.0.0</version>
  <description>extruder_stepper_velocity_controller</description>

  <maintainer email="laurent.barbe@unistra.fr">Laurent Barbé</maintainer>
  <license>Apache License 2.0</license>


  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <build_depend>pluginlib</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>