<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>extruder_hardware</name>
  <version>0.0.0</version>
  <description>Demo hardware for a extruder control for ros2_control.</description>

  <author>Laurent Barbé</author>
  <maintainer email="laurent.barbe@unistra.fr">Laurent Barbé</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <exec_depend>extruder_description</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>